--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.7",
+    "react-test-renderer": "^17.0.2"
   }
 }
