--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -44,8 +45,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^18.0.7",
+    "cypress": "^13.7.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "react-test-renderer": "^17.0.2"
   }
 }
